tinyc/test/bad/ptr-diff-char-uchar.c
int main()
{
    char *p1;
    unsigned char *p2;

    p1 - p2;
    return 0;
}
